# Concept-Acquisition-Pipeline

./: .gitmodules  README.md  align_to_video.py  annotated-as-seed.json  annotated_concepts_to_json.py  clustering.py  confidence_prop.py  config.py  config_idf.py  config_nil.py  evaluation.py  init.sh  myst.cc  os_concepts_annotated.csv  parse_doc.py  parse_xlsx.py  print_evaluation.ipynb  requirements.txt  rerank.py  result.xlsx  run.sh  run_example.sh  show_clusters_xlsx.py  xlink.py
confidence_propagation/: algorithm_api.py  average_distance.py  pagerank.py  tf_idf.py
crawler/: crawler_main.py
processed_data/cluster_results/: cluster_result.json
processed_data/rerank_results/: rerank_result.json
processed_data/xlink_results/: baike_context
scripts/: exercises_dsa.sql  get_exercise_info.py  get_subtitle_from_course_id.py  get_subtitle_from_course_id.sh  load_exercise.py  prepare_data.py  read_concepts_excel.py  video_titles.sql
suffix_tree/: CMakeLists.txt  Makefile  myst.cc  myst.h
suffix_tree/include/: myst.h
suffix_tree/python/: CMakeLists.txt  pyst.cc
suffix_tree/src/: CMakeLists.txt  myst.cc  myst.h
tmp/: middle_res.txt  result.json
